--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.3",
     "mongoose-type-email": "^1.1.2",
     "morgan": "^1.10.0",
