--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=3003
-# DATABASE_URL=mongodb://localhost:27017/bookingapp
+DATABASE_URL=mongodb://localhost:27017/bookingapp
 JWT_SECRET=mysupersecretkey
-DATABASE_URL=mongodb+srv://user1:k9xknI2yB7lWJktT@cluster0.f39rrq4.mongodb.net/bookingapp?retryWrites=true&w=majority
+# DATABASE_URL=mongodb+srv://user1:k9xknI2yB7lWJktT@cluster0.f39rrq4.mongodb.net/bookingapp?retryWrites=true&w=majority
+# 96mOctjjWecxSloD
